# news_tracker

./: .country_list  .env.example  .gitignore  .news_topics  CLAUDE.md  README.md  main.py  pyproject.toml
backend/: app.py  config.py  models.py  store.py
backend/routers/: config_router.py  news.py
backend/services/: analyzer.py  news_fetcher.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts
frontend/src/app/components/news-card/: news-card.component.css  news-card.component.html  news-card.component.ts
frontend/src/app/components/news-list/: news-list.component.css  news-list.component.html  news-list.component.ts
frontend/src/app/models/: article.model.ts
frontend/src/app/services/: news.service.ts
