[project]
name = "news-check"
version = "0.1.0"
description = "News scraper with AI-powered summarization and bias detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "feedparser>=6.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
news-check = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
